* Version 4.1.x  --  Stable Branch

Patchlevel 5

Unreleased.


** Bug Fixes

- [Enblend and Enfuse] Fix compilation problem with gcc-6 (#1537368).


** Package Maintainer Stuff

- Get documentation target `xhtml' working again.


Patchlevel 4

Released on September 28, 2015.


** New Commandline Options

- The introduction of additional blend color spaces in the Development
  Branch requires a new option to select them.  Here, in the Stable
  Branch, the new option `--blend-colorspace' just duplicates the
  functionality of `--ciecam' and `--no-ciecam'.  The Stable Branch
  does *not* provide the additional blend colorspaces of the
  Development Branch.  The following equivalences hold
      --ciecam     <=>  --blend-colorspace=ciecam
      --no-ciecam  <=>  --blend-colorspace=identity
  Both options `--ciecam' and `--no-ciecam' are deprecated in 4.2 and
  will be withdrawn in 4.3.  Thus, users should prefer
  `--blend-colorspace'.


** Bug Fixes

- [Enblend and Enfuse] Fix the nesting-depth counter for response
  files.  This bug prohibited to load more than 20 images in a single
  response file.

- [Enblend and Enfuse] Allow grayscale images to bring their own
  (grayscale) profiles.  Previously grayscale images with ICC profiles
  were rejected.

- [Enblend] Fix a possible domain error followed by a division-by-zero
  in the seam-line optimizer.

- [Enblend and Enfuse] Avoid an undeserved warning about incompatible
  colorspaces if they only disagree on their meta-data (e.g. profile
  creation date/time).

- [Enblend] Fix a bug in the Dijkstra Optimizer which could lead to
  undefined behavior in the placement of the (optimized) seam line.

- [Enblend] Fix a non-dereferencable vector iterator which led to a
  segfault.

- [Enblend] Avoid a division-by-zero in the Annealing Optimizer.

- [Enblend] Fix a bug (#1356551) in the seam-line vectorization code
  that was there since 2004.  The fix changes the position of almost