@@ -1,7 +1,7 @@
 This is enblend.info, produced by makeinfo version 5.2 from
 enblend.texi.
 
-This manual is for Enblend (version 4.1.5-467a73754dbb, 24 January
+This manual is for Enblend (version 4.1.5-703400a05473, 24 January
 2016), a tool for compositing images in such a way that the seam between
 the images is invisible, or at least very difficult to see.
 
@@ -24,7 +24,7 @@ File: enblend.info,  Node: Top,  Next: Overview,  Up: (dir)
 Enblend
 *******
 
-This manual is for Enblend (version 4.1.5-467a73754dbb, 24 January
+This manual is for Enblend (version 4.1.5-703400a05473, 24 January
 2016), a tool for compositing images in such a way that the seam between
 the images is invisible, or at least very difficult to see.
 
@@ -970,7 +970,7 @@ cropping of the output image.
      - to accelerate some computations.
 
      This is an experimental feature that may not work on all systems.
-     In this version of Enblend, 4.1.5-467a73754dbb, only mask
+     In this version of Enblend, 4.1.5-703400a05473, only mask
      optimization by Simulated Annealing benefits from this option.
 
      Note that GPU-support must have been compiled into Enblend for this
@@ -1265,7 +1265,7 @@ These options control the generation and the usage of masks.
 
      The optimizer weights DISTANCE-WEIGHT and MISMATCH-WEIGHT define
      how to weight these two criteria.  Enblend up to version 3.2 used
-     1:1.  This version of Enblend (4.1.5-467a73754dbb) uses 8.0:1.0.
+     1:1.  This version of Enblend (4.1.5-703400a05473) uses 8.0:1.0.
 
      A large DISTANCE-WEIGHT pulls the optimized seam line closer to the
      initial postion.  A large MISMATCH-WEIGHT makes the seam line go on
@@ -1505,7 +1505,7 @@ File: enblend.info,  Node: Primary Seam Generators,  Next: Color Profiles,  Prev
 4 Primary Seam Generators
 *************************
 
-This version (4.1.5-467a73754dbb) of Enblend supports two main
+This version (4.1.5-703400a05473) of Enblend supports two main
 algorithms to generate seam lines.  Use
 option '--primary-seam-generator' to select one of the generators.
 
