@@ -1,6 +1,6 @@
 This is enfuse.info, produced by makeinfo version 5.2 from enfuse.texi.
 
-This manual is for Enfuse (version 4.1.5-467a73754dbb, 24 January 2016),
+This manual is for Enfuse (version 4.1.5-703400a05473, 24 January 2016),
 a program to merge different exposures of the same scene to produce an
 image that looks much like a tonemapped image.
 
@@ -23,7 +23,7 @@ File: enfuse.info,  Node: Top,  Next: Overview,  Up: (dir)
 Enfuse
 ******
 
-This manual is for Enfuse (version 4.1.5-467a73754dbb, 24 January 2016),
+This manual is for Enfuse (version 4.1.5-703400a05473, 24 January 2016),
 a program to merge different exposures of the same scene to produce an
 image that looks much like a tonemapped image.
 
@@ -1367,7 +1367,7 @@ read the manual before applying them successfully.
      Use gray projector PROJECTOR for conversion of RGB images to
      grayscale: (R, G, B) --> Y.
 
-     In version 4.1.5-467a73754dbb of Enfuse, the option is effective
+     In version 4.1.5-703400a05473 of Enfuse, the option is effective
      for exposure weighting and local contrast weighting.  Default:
      'average'.
 
@@ -1830,7 +1830,7 @@ Local Entropy    0.0
                  
 
 Table 5.1: Enfuse's default weights as compiled into
-version 4.1.5-467a73754dbb.
+version 4.1.5-703400a05473.
 
    To disable a particular criterion set its weight to zero as for
 example
